# stabilizerPi

./: README.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: aom_lut.c  aom_lut.h  config.h  main.c  pid.c  pid.h  ramp_test.c  ramp_test_lut.c
scripts/: monitor.py  rc_filter_sim.ipynb  requirements.txt
